cmake_minimum_required(VERSION 3.19)
project(5b983a984ee9c61dc95f_9071b8eabc8262a32a82a29624b66afc7f8f543f)

set(CMAKE_CXX_STANDARD 14)

add_executable(5b983a984ee9c61dc95f_9071b8eabc8262a32a82a29624b66afc7f8f543f
        .idea/.gitignore
        .idea/5b983a984ee9c61dc95f-9071b8eabc8262a32a82a29624b66afc7f8f543f.iml
        .idea/modules.xml
        "Connect Four .c")
